--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+PORT=3000
 GOOGLE_APPLICATION_CREDENTIALS=E:\cleAPI1\kenne-mqcu-e488f34f412b.json
 # GOOGLE_APPLICATION_CREDENTIALS=./kenne-mqcu-ef102a565896.json
 # GOOGLE_APPLICATION_CREDENTIALS=./kenne-mqcu-e488f34f412b.json
